styles.scss
/* ... */
// About Section 
#particles-js-about { 
  position: absolute;
  width: 100%;    
}

.about { 
  min-height: 100vh; 
  max-width: 100%;
  position: relative;   
  display: flex; 
  flex-direction: column; 
  justify-content: space-evenly; 
  align-items: center;  
  font-family: $primary-font;   
  &__article {
    display: flex; 
    justify-content: space-between; 
    align-items: flex-start;
    width: 70vw;
    height: 40vh;  
  }
  &__article__text {
    display: flex;
    flex-direction: column; 
    justify-content: space-around;
    height: 100%;
    width: 70%;   
  }
  &__article__header { 
    font-size: 50px;  
  }
  &__article__profile-pic {
    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
    background: linear-gradient(#0B4284, #0B4284) padding-box, linear-gradient(#1178c3, #afb2b5) border-box; 
    border: 5px solid transparent;      
    border-radius: 15px;
    overflow: hidden; 
    height:100%;  
  } 
  &__article__info {
    font-size: 24px;
    height: 100%;
    // list-style-position: inside;
  &__highlight {
    color: #64ffda;
    font-weight: bold;  
  } 
  }
  .fa-li {
    left: -2em;
    position: absolute;
    text-align: center;
    width: 2em;
    line-height: inherit;
    margin-left: -1em; 
}

  &__tech-stack {
    display: flex; 
    flex-direction: column; 
    justify-content: space-between;
    align-items: center;     

  }
  &__tech-stack__header {
    font-size: 40px;
    margin-bottom: 40px; 
    border-bottom: 2px solid white; 
    border-radius: 10px; 
  }
  &__tech-stack__icons {
    display: grid; 
    grid-template-columns: repeat(4,auto);
    grid-template-rows: repeat(3, auto); 
    width: 70vw; 
    font-size: 25px;  
    max-height: 100%; 
    gap: 10px; 
    justify-content: space-evenly;  
    text-align: center; 
    border-left: 5px white solid;
    border-right: 5px white solid;  
  }
}

// Miscellaneous styling for section

#_nology, #university-of-surrey {
  text-decoration: blink;
  color: #FF6489;   
}

#_nology:visited, #chemosphere:visited, #university-of-surrey:visited {
  color: lightskyblue;  
}

// Projects Section 

#particles-js-projects { 
  position: absolute;
  width: 100%; 
  height: 100%;   
}

.projects {
  position: relative;
  max-width: 100%;   
  display: flex; 
  flex-direction: column; 
  justify-content: space-around; 
  align-items: center;  
  font-family: $primary-font;
  &__header {
    font-size: 45px;
    font-weight: bold;
    display: flex; 
    justify-content: flex-start; 
    width: 70vw;
    align-items: center; 
    margin-bottom: 50px;   
  }
  &__subheader {
    color: $secondary-color;     
  } 
  &__card {
    display: flex; 
    justify-content: space-between; 
    width: 70vw;  
    // align-items: flex-start;
    z-index: 10; 
    margin-bottom: 50px; 
    object-fit: contain;    
  } 
  &__card__text {
    display: flex;
    flex-direction: column; 
    justify-content: space-evenly;
    align-items: flex-start;
    width: 55%; 
    max-height: 100%; 
  } 
  &__card__img { 
    width: 40%;  
    border-radius: 15px;
    background: linear-gradient(#0B4284, #0B4284) padding-box, linear-gradient(#1178c3, #afb2b5) border-box; 
    border: 5px solid transparent;    
    z-index: 10; 
  }
  &__card__links {
    width: 100%; 
    display: flex; 
    justify-content: flex-start;  
    &-btn {
      color: #64FFDA; 
      background-color: $tertiary-color; 
      font-family: $primary-font; 
      font-weight: bold; 
      border-radius: 15px; 
      padding: 15px;
      margin-right: 20px;  
      border: 2px solid $secondary-color;
    }
    &-btn:hover {
      transform: scale(1.2,1.2); 
    }
  }
}

// Contact Section 

#particles-js-contact { 
  position: absolute;
  width: 100%; 
  height: 100%; 
}

.contact {
  max-width: 100%;  
  min-height: 100vh;
  position: relative;
  display: flex; 
  flex-direction: column; 
  justify-content: space-around; 
  align-items: center;  
  font-family: $primary-font;
  color: $primary-color; 
  &__card {
    display: flex; 
    flex-direction: column; 
    justify-content: space-around; 
    align-items: center; 
    height: 70vh;
    width: 70vw;   
  } 
  &__card__message, &__card__header, &__card__form__button  {
    font-family: $primary-font; 
  }
  &__card__header {
    font-size: 50px;  
    font-weight: bold;
    align-self: flex-start;
    margin-bottom: 50px;  
  }
  &__card__message {
    font-size: 40px;
    text-align: center; 
  }
  &__card__form {
    z-index: 5; 
    width: 30vw;
    height: 30vh;  
    display: flex;
    justify-content: center; 
    flex-direction: column;
    margin-top: 50px; 
    align-items: center;
    &__inputs {
      display: flex; 
      flex-direction: column; 
      width: 30vw; 
      z-index: 5; 
      color: black;
      border: none;
      justify-content: space-around;
      height: 30vh;    
    }
    &__button {
      font-size: 25px;  
      width: auto;
      height: auto; 
      border: 5px solid transparent; 
      border-radius: 20px;
      text-align: center;
      font-weight: bold;
      background: linear-gradient(#0BCE83, #0BCE83) padding-box, linear-gradient(#1178c3, #afb2b5) border-box;   
      margin-top: 20px; 
      padding: 10px; 
    }
  }
  &__card__footer {
    display: flex; 
    justify-content: center; 
    align-items: center; 
    text-decoration: overline;
    z-index: 5;   
  } 
  &__card__footer__info {
    font-size: 20px;
    color: $primary-color; 
    font-family: $secondary-font; 
  }  
  &__card__footer__socials {
    font-size: 19px; 
    color: $primary-color;
    border-top: 2px solid white;  
  }
}

// Misc Icon Styling 

.fa-envelope, .fa-handshake, .fa-tools, .hi-icon  {
  color: black; 
}
/* ... */

